--- a/package.json
+++ b/package.json
@@ -55,9 +55,8 @@
 		]
 	},
 	"peerDependencies": {
-		"@spon/core": "^2.0.0",
-		"@spon/domevents": "^1.0.2",
-		"raf-throttle": "^2.0.3"
+		"@spon/core": "^2.0.1",
+		"@spon/domevents": "^1.0.2"
 	},
 	"dependencies": {
 		"raf-throttle": "^2.0.3"
