--- a/package.json
+++ b/package.json
@@ -27,24 +27,6 @@
 		"test": "jest",
 		"test:watch": "jest --watch"
 	},
-	"jest": {
-		"testURL": "http://localhost:3000/",
-		"setupFiles": [
-			"<rootDir>/setup-jest.js"
-		],
-		"collectCoverageFrom": [
-			"src/js/core/**/*.{js,jsx,ts,tsx}",
-			"!**/node_modules/**",
-			"!cypress/**"
-		],
-		"testMatch": [
-			"**/?(*.)(spec|test).js?(x)"
-		],
-		"testPathIgnorePatterns": [
-			"/node_modules/",
-			"/cypress"
-		]
-	},
 	"quokka": {
 		"babel": {
 			"env": "test"
@@ -55,7 +37,7 @@
 		]
 	},
 	"peerDependencies": {
-		"@spon/core": "^2.1.1",
+		"@spon/core": "2.1.2",
 		"@spon/domevents": "^2.0.0"
 	},
 	"dependencies": {
@@ -63,42 +45,43 @@
 		"raf-throttle": "^2.0.3"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.0.0-beta.54",
-		"@babel/core": "^7.0.0-beta.54",
+		"@babel/cli": "^7.6.2",
+		"@babel/core": "^7.6.2",
 		"@babel/plugin-proposal-class-properties": "^7.3.0",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-async-to-generator": "^7.2.0",
 		"@babel/plugin-transform-modules-commonjs": "^7.2.0",
-		"@babel/plugin-transform-runtime": "^7.2.0",
-		"@babel/preset-env": "^7.0.0-beta.54",
-		"@babel/runtime": "^7.3.1",
-		"@rematch/core": "^1.0.6",
+		"@babel/plugin-transform-runtime": "^7.6.2",
+		"@babel/preset-env": "^7.6.2",
+		"@babel/runtime": "^7.6.2",
+		"@spon/core": "^2.1.2",
+		"@spon/domevents": "^2.0.0",
+		"@testing-library/dom": "^6.4.0",
+		"@testing-library/jest-dom": "^4.1.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.0.1",
-		"babel-jest": "22.4.3",
+		"babel-jest": "24.9.0",
 		"babel-plugin-dynamic-import-node": "^2.2.0",
 		"codecov": "^3.0.2",
-		"dom-testing-library": "^3.16.5",
-		"eslint": "^4.19.1",
-		"eslint-config-airbnb": "^16.1.0",
-		"eslint-config-prettier": "^4.0.0",
+		"eslint": "^6.4.0",
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-config-prettier": "^6.3.0",
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jest": "^22.3.0",
 		"eslint-plugin-jsx-a11y": "^6.2.1",
 		"eslint-plugin-react": "^7.12.4",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^24.1.0",
-		"jest-dom": "^3.1.0",
-		"rollup": "^0.58.1",
+		"rollup": "^1.21.4",
 		"rollup-plugin-babel": "^4.0.0-beta.4",
-		"rollup-plugin-babel-minify": "^4.0.0",
-		"rollup-plugin-commonjs": "^9.1.0",
-		"rollup-plugin-filesize": "^1.5.0",
+		"rollup-plugin-babel-minify": "^9.1.0",
+		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-filesize": "^6.2.0",
 		"rollup-plugin-local-resolve": "^1.0.7",
-		"rollup-plugin-node-resolve": "^3.3.0",
+		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-peer-deps-external": "^2.1.0",
-		"rollup-plugin-postcss": "^1.5.1",
-		"rollup-plugin-terser": "^1.0.1",
+		"rollup-plugin-postcss": "^2.0.3",
+		"rollup-plugin-terser": "^5.1.2",
 		"source-map-loader": "^0.2.3"
 	},
 	"publishConfig": {
